tests/cfg/js/success/ast_nestedfundecl2.js
y = 1;
obj = {y:10};
with (obj) {
    y;
}
y;
