tests/cfg/js/error/astRewrite/ast_nestedfundecl3.js
with ({y:10}) {
    y;
}
y;
